...
            fontSize: 18,
            fontWeight: "bold",
            color: "hsl(213, 31%, 91%)",
            marginBottom: 16,
          }}
        >
          Start Workout
        </Text>

        <Pressable
          style={{
            flexDirection: "row",
            alignItems: "center",
...
            style={{
              color: "hsl(222.2, 47.4%, 11.2%)",
              fontWeight: "600",
              fontSize: 16,
            }}
          >
            Empty Workout
          </Text>
        </Pressable>

        {hasTemplates && (
          <>
            <View
...
