appId: com.mettlelift.app
---
- launchApp:
    clearKeychain: true
    clearState: true
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: "email-input"
    timeout: 60000
- tapOn:
    id: "email-input"
- inputText: "test@example.com"
- tapOn:
    id: "password-input"
- inputText: "password123"
- tapOn:
    id: "login-button"
- extendedWaitUntil:
    visible:
      id: "greeting"
    timeout: 60000
- tapOn:
    id: "fab-button"
- extendedWaitUntil:
    visible: "Start Workout"
    timeout: 10000
- tapOn: "Start Workout"
- extendedWaitUntil:
    visible: "Empty Workout"
    timeout: 10000
